@@ -13,6 +13,7 @@ t/3_file.t
 t/3_rtml2.1.t
 t/4_multiple.t
 t/4_replicate.t
+t/5_ir.t
 t/rtml2.1/ers_observation_accepted.xml
 t/rtml2.1/ers_observation_rejected.xml
 t/rtml2.1/ers_observations_complete.xml
@@ -29,3 +30,4 @@ t/rtml2.2/example_score_reply.xml
 t/rtml2.2/example_score_reply_scores.rtml
 t/rtml2.2/problem_1.xml
 t/rtml2.2/problem_2.xml
+t/rtml2.2/supircam.rtml
